<resources>
    <string name="app_name">GooseBuddy</string>
    <string name="action_settings">Settings</string>

    <string name="tab_automation">Auto switching on</string>
    <string name="tab_ac_helpers">Air conditioner\nhelpers</string>
    <string name="tab_title_system">System settings</string>
    <string name="hvac_helpers_title">Front windshield heating</string>
    <string name="hvac_decrease_defrost_wind_speed">Decrease wind speed</string>
    <string name="hvac_decrease_descr">Decrease wind speed when front defrost is turned on</string>

    <string name="active_safety_aid_speed_reminder_close">Close</string>
    <string name="hvac_defrost_wind_speed">Defrost wind speed</string>
    <string name="steering_wheel_heating_title">Steering wheel heating</string>
    <string name="steering_wheel_heating_auto_off_option">Auto switch-off of steering wheel heating</string>
    <string name="steering_wheel_heating_auto_off_descr">Switch off steering wheel heating after the specified number of minutes</string>
    <string name="steering_wheel_heating_auto_off_time">Switch-off time</string>
    <string name="seat_heating_auto_off_title">Seat heating auto switch off</string>
    <string name="seat_heating_auto_off_option">Auto switch-off of seat heating</string>
    <string name="seat_heating_auto_off_descr">Switch off seat heating after the specified number of minutes</string>
    <string name="seat_heating_auto_off_time">Switch-off time</string>
    <string name="hvac_defrost_auto_switchoff_enabled">Auto switch-off</string>
    <string name="hvac_defrost_auto_switchoff_descr">Switch off front windshield heating after the specified number of minutes</string>
    <string name="hvac_defrost_auto_switchoff_time">Switch-off time</string>
    <string name="under_construction">Under construction</string>
    <string name="front_defrost_turn_on">Turn on front defrost</string>
    <string name="rear_defrost_turn_on">Turn on rear defrost</string>
    <string name="seat_heating">Seat heating</string>
    <string name="heating_off">OFF</string>
    <string name="sh_front_left">Front left seat</string>
    <string name="sh_front_right">Front right seat</string>
    <string name="sh_rear_left">Rear left seat</string>
    <string name="sh_rear_right">Rear right seat</string>
    <string name="steering_wheel_heating_turn_on">Steering wheel heating</string>
    <string name="heating_switch_on_head">Heating</string>
    <string name="auto_heating_after_start">Heating scenarios</string>
    <string name="auto_heating_after_start_descr">After engine start, run auto heating scenarios</string>
    <string name="auto_heating_min_temperature">Min temperature to run</string>
    <string name="auto_heating_delay">Delay between starts</string>
    <string name="auto_heating_head">Auto scenarios</string>
    <string name="auto_heating_min_temperature_descr">If the temperature is below the specified value, the heating scenario is launched</string>
    <string name="auto_heating_delay_descr">If less than the specified time has passed since the previous launch, the heating scenario will not be launched.</string>
</resources>
