<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/bg_color" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/ScrollStyle">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:text="@string/hvac_helpers_title" android:drawableStart="@drawable/ic_air_window_front_nor" style="@style/TitleTextStyleNew"/>

            <com.yftech.settings.widget.ItemSwitchDescribeView android:id="@+id/hvac_defrost_decrease_wind_speed_enabled" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleString="@string/hvac_decrease_defrost_wind_speed" app:descString="@string/hvac_decrease_descr"/>
            <com.yftech.settings.widget.ItemOptionDescribeView android:id="@+id/hvac_defrost_decrease_wind_speed" android:layout_width="match_parent" android:layout_height="wrap_content" app:switchTabs="@array/ac_wind_speed_variants" app:titleString="@string/hvac_defrost_wind_speed"/>

            <com.yftech.settings.widget.ItemSwitchDescribeView android:id="@+id/hvac_defrost_auto_switchoff_enabled" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleString="@string/hvac_defrost_auto_switchoff_enabled" app:descString="@string/hvac_defrost_auto_switchoff_descr"/>
            <com.yftech.settings.widget.ItemSeekBarNumIconView android:id="@+id/hvac_defrost_auto_switchoff_time" android:layout_width="match_parent" android:layout_height="wrap_content" app:contentVisible="true" app:titleString="@string/hvac_defrost_auto_switchoff_time"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:text="@string/steering_wheel_heating_title" android:drawableStart="@drawable/ic_selector_wheel_heat" style="@style/TitleTextStyleNew"/>
            <com.yftech.settings.widget.ItemSwitchDescribeView android:id="@+id/steering_wheel_heating_auto_off_switch" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleString="@string/steering_wheel_heating_auto_off_option" app:descString="@string/steering_wheel_heating_auto_off_descr"/>
            <com.yftech.settings.widget.ItemSeekBarNumIconView android:id="@+id/steering_wheel_heating_auto_off_time" android:layout_width="match_parent" android:layout_height="wrap_content" app:contentVisible="true" app:titleString="@string/steering_wheel_heating_auto_off_time"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:text="@string/seat_heating_auto_off_title" android:drawableStart="@drawable/control_icon_r_seatheating_3" style="@style/TitleTextStyleNew"/>
            <com.yftech.settings.widget.ItemSwitchDescribeView android:id="@+id/seat_heating_auto_off_switch" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleString="@string/seat_heating_auto_off_option" app:descString="@string/seat_heating_auto_off_descr"/>
            <com.yftech.settings.widget.ItemSeekBarNumIconView android:id="@+id/seat_heating_auto_off_time" android:layout_width="match_parent" android:layout_height="wrap_content" app:contentVisible="true" app:titleString="@string/seat_heating_auto_off_time"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>